--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-</body>
-</html>
+{% block content %}
+    <h1>Кликер!</h1>
+
+    <p>Количество кликов: {{ current_user.clicks }}
+
+    <a href="{{ url_for('click') }}">Кнопка</a>
+
+{% endblock %}
