--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -7,11 +7,11 @@
         {{ form.hidden_tag() }}
         <div>
             {{ form.username.label }}<br>
-            {{ form.username(size=32) }}<br>
+            {{ form.username }}<br>
         </div>
         <div>
             {{ form.password.label }}<br>
-            {{ form.password(size=32) }}<br>
+            {{ form.password }}<br>
         </div>
         <div>
             {{ form.submit() }}
