--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,21 +1,21 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>Вход</h1>
+    <h1>Регистрация</h1>
 
-    <form method="post" action="{{ url_for('login') }}">
+    <form method="post" action="{{ url_for('register') }}">
         {{ form.hidden_tag() }}
         <div>
             {{ form.username.label }}<br>
-            {{ form.username(size=32) }}<br>
+            {{ form.username }}<br>
         </div>
         <div>
             {{ form.password.label }}<br>
-            {{ form.password(size=32) }}<br>
+            {{ form.password }}<br>
         </div>
         <div>
             {{ form.confirm_password.label }}<br>
-            {{ form.confirm_password(size=32) }}<br>
+            {{ form.confirm_password }}<br>
         </div>
         <div>
             {{ form.submit() }}
