--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,10 +1,11 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>Кликер!</h1>
+<div class="container mt-4 text-center">
+    <h1 class="display-4">Кликер!</h1>
 
-    <p>Количество кликов: {{ current_user.clicks }}
+    <p class="lead">Количество кликов: <strong>{{ current_user.clicks }}</strong></p>
 
-    <a href="{{ url_for('click') }}">Кнопка</a>
-
+    <a href="{{ url_for('click') }}" class="btn btn-primary btn-lg">Нажми сюда</a>
+</div>
 {% endblock %}
